--- a/courseware/index.html
+++ b/courseware/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学">
+		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学及应用">
 		<link rel="icon" href="https://tyutmsemt.github.io//favicon.ico">
-		<title> - 材料热力学</title>
+		<title> - 材料热力学及应用</title>
 		
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/highlight/default.css">
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学</a>
+				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学及应用</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -74,9 +74,23 @@
 <h2 id="课件下载">课件下载</h2>
 
 <ul>
-<li>2018/07/28 <a href="/files/slides.pptx">PPT</a></li>
-<li>2018/08/04 <a href="/pdf/slides.pdf">PDF</a></li>
-<li>2018/08/20 <a href="/files/材料热力学-第一章20171125.ppt">课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第一章201810901.pdf">第一章课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第二章201810901.pdf">第二章课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第三章201810901.pdf">第三章课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第四章201810901.pdf">第四章课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第五章201810901.pdf">第五章课件</a></li>
+<li><a href="/pdf/材料热力学及应用-第六章201810901.pdf">第六章课件</a></li>
+</ul>
+
+<h2 id="教案">教案</h2>
+
+<ul>
+<li><a href="/files/第一章1.txt">第一章</a></li>
+<li><a href="/files/第二章1.txt">第二章</a></li>
+<li><a href="/files/第三章1.txt">第三章</a></li>
+<li><a href="/files/第四章1.txt">第四章</a></li>
+<li><a href="/files/第五章1.txt">第五章</a></li>
+<li><a href="/files/第六章1.txt">第六章</a></li>
 </ul>
 
 				</section>
@@ -99,6 +113,7 @@
 <li>
 <ul>
 <li><a href="#课件下载">课件下载</a></li>
+<li><a href="#教案">教案</a></li>
 </ul></li>
 </ul>
 </nav>
