--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学">
+		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学及应用">
 		<link rel="icon" href="https://tyutmsemt.github.io//favicon.ico">
-		<title> - 材料热力学</title>
+		<title> - 材料热力学及应用</title>
 		
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/highlight/default.css">
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学</a>
+				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学及应用</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -75,6 +75,14 @@
 
 <p><a href="http://www2017.tyut.edu.cn/">太原理工大学</a> <a href="http://www.tyut.edu.cn/cl/">材料科学与工程学院</a> 《材料热力学及应用》</p>
 
+<h3 id="课程简况">课程简况</h3>
+
+<p>材料热力学与动力学、晶体学以及固体物理和固体化学组成材料科学的基础，本课程是材料科学与工程专业硕士研究生的专业必修课程。材料工程包括材料的设计、制造、成型和检验，它是应用材料科学的原理进行材料设计和加工的综合学科。材料科学和工程已成为一个整体，热力学在这个领域的应用，对发展材料的品种、提高材料的质量，日益显示其积极的作用。因此通过该课程的学习，使学生既掌握热力学的基本概念、原理和方法，又能将这些原理和方法结合材料实践加以应用；学会应用材料热力学原理阐明和预测相图、相变以及材料的其他物理现象。培养学生严密科学的思维方法和开放的分析和解决问题的能力，培养学生的创新精神。</p>
+
+<h3 id="适用对象">适用对象</h3>
+
+<p>适用于材料科学与工程学科硕士研究生、博士研究生，以及大专院校从事材料科学与工程研究的教师和科技工作者。</p>
+
 <h2 id="教学大纲">教学大纲</h2>
 
 <!-- [教学大纲](/files/教学大纲.doc) -->
@@ -102,7 +110,7 @@
 1.6 材料热力学研究的目的、研究对象<br />
 1.7 小结</p>
 
-<p>第二章 热力学定律<br />
+<p>第二章 材料热力学基础<br />
 2.1 热力学基本概念<br />
 2.2 热力学第零定律（热平衡和温度）<br />
 2.3 热力学第一定律（能量关系）<br />
@@ -110,56 +118,44 @@
 2.5 热力学第三定律（熵值计算）<br />
 2.6 小结</p>
 
-<p>第三章 热力学系统的平衡条件<br />
-3.1  平衡概念<br />
-3.2  平衡概念的热力学表达形式<br />
-3.3  平衡条件的数学表达式<br />
-3.4  单元双相系统的平衡条件<br />
-3.5  小结</p>
+<p>第二部分 材料热力学在材料科学中的应用<br />
+第三章 相图热力学<br />
+3.1 材料相图计算<br />
+3.2 不锈钢相图及应用<br />
+3.3 镁合金相图及应用<br />
+3.4 磁性材料相图及应用<br />
+3.5 小结</p>
 
-<p>第四章 统计热力学<br />
-4.1  统计热力学基础<br />
-4.2  统计热力学判据<br />
-4.3  统计热力学的应用<br />
-4.4  经典热力学与统计热力学的关系<br />
-4.5  小结</p>
+<p>第四章 相变热力学<br />
+4.1 新相的形成<br />
+4.2 不锈钢相变热力学<br />
+4.3 凝固热力学<br />
+4.4 变形与相变<br />
+4.5 小结</p>
 
-<p>第二部分 热力学在材料科学中的应用<br />
-第五章 相图<br />
-5.1 单元系相图<br />
-5.2 二元系相图<br />
-5.3 多元系相图<br />
-5.4 亚稳相相图<br />
-5.5金属的渗碳<br />
-5.6 小结</p>
+<p>第五章 材料设计与热力学<br />
+5.1 材料设计与热力学<br />
+5.2 不锈钢材料热力学解析<br />
+5.3 镁合金材料热力学解析<br />
+5.4 其它新型材料热力学解析<br />
+5.5 小结</p>
 
-<p>第六章表面与界面 氧化与腐蚀<br />
-6.1 界面热力学<br />
-6.2 毛细效应对相图的影响<br />
-6.3 表面与界面<br />
-6.3.1 表面<br />
-6.3.2 晶界<br />
-6.3.3 相界<br />
-6.3.4 各类界面<br />
-6.4 小结</p>
+<p>第六章 材料中一些物理象限热力学解释<br />
+6.1 催化新材料<br />
+6.2 金属腐蚀与防护<br />
+6.3 能源材料<br />
+6.4 光电材料<br />
+6.5 小结</p>
 
-<p>第七章 固体中的缺陷<br />
-7.1 在单质晶体中的点缺陷<br />
-7.2 化学计量配比化合物晶体中的点缺陷<br />
-7.3 非化学计量配比化合物晶体中的点缺陷<br />
-7.4 非化学计量配比化合物中的杂质<br />
-7.5 小结</p>
+<h2 id="参考文献">参考文献</h2>
 
-<p>第八章 化学平衡<br />
-8.1 质量作用定律<br />
-8.2 范德霍夫等温、等压方程<br />
-8.3 金属的氧化<br />
-8.4 小结</p>
-
-<p>第九章 材料设计与热力学<br />
-9.1 经验材料设计的热力学<br />
-9.2 相图计算（CALPHAD）与合金设计<br />
-9.3 小结</p>
+<ol>
+<li>《材料热力学》，科学出版社，徐祖耀。</li>
+<li>《材料热力学》，化学工业出版社，郝士明。</li>
+<li>《合金热力学》， 机械工业出版社，石霖编著。</li>
+<li>《合金能量学》，上海科学技术出版社，肖纪美著。</li>
+<li>《材料热力学习题与解答》，化学工业出版社，李洪晓，蒋敏，郝士明 编著</li>
+</ol>
 
 				</section>
 			</article>
@@ -180,8 +176,13 @@
 <ul>
 <li>
 <ul>
-<li><a href="#材料热力学及应用">材料热力学及应用</a></li>
+<li><a href="#材料热力学及应用">材料热力学及应用</a>
+<ul>
+<li><a href="#课程简况">课程简况</a></li>
+<li><a href="#适用对象">适用对象</a></li>
+</ul></li>
 <li><a href="#教学大纲">教学大纲</a></li>
+<li><a href="#参考文献">参考文献</a></li>
 </ul></li>
 </ul>
 </nav>
