--- a/instructor/index.html
+++ b/instructor/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学">
+		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学及应用">
 		<link rel="icon" href="https://tyutmsemt.github.io//favicon.ico">
-		<title> - 材料热力学</title>
+		<title> - 材料热力学及应用</title>
 		
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/highlight/default.css">
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学</a>
+				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学及应用</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -143,21 +143,23 @@
 </tbody>
 </table>
 
-<h1 id="负责人简介">负责人简介</h1>
+<h1 id="团队简介">团队简介</h1>
 
-<p><strong>韩培德</strong>   太原理工大学，材料科学与工程学院教授/博导。太原理工大学材料科学与工程分学术委员会主任，兼任中国体视学会金相与显微分析分会常务理事，中国脉冲星导航专家委员会常务理事，山西省热处理学会副理事长，山西省腐蚀与防护学会常务理事。
+<h3 id="韩培德"><strong>韩培德</strong></h3>
+
+<p>太原理工大学，材料科学与工程学院教授/博导。太原理工大学材料科学与工程分学术委员会主任，兼任中国体视学会金相与显微分析分会常务理事，中国脉冲星导航专家委员会常务理事，山西省热处理学会副理事长，山西省腐蚀与防护学会常务理事。
 多年来，致力于高品质不锈钢、金属基复合材料等合金化设计、制备关键技术、产品开发等方面研究工作，在先进金属材料成分优化设计、制备工艺、组织与性能研究（热加工性能、耐蚀性、耐磨性、高温氧化行为等）方面积累了丰富的经验。在实验研究的基础上，结合计算机模拟方法对合金成分优化设计、预测材料性能、解释实验现象，弥补了实验研究的不足，为从微观层次揭示和预测材料的微观组织结构，合金元素相互作用、相界面结合能力以及金属原子层次强化机制，组织与各项性能的关联性等奠定了基础。长期以来一直与太钢联合攻关，开展了超超临界机组用耐热合金HR3C的国产化研究以及高温抗氧化能力分析，超级奥氏体不锈钢254SMO的微合金化调控。围绕奥氏体、双相不锈钢开展耐蚀机理、抗氧化性能等方面的研究。进行金属基复合材料成分设计、失效分析，为优化材料成分、加工工艺提供指导。</p>
 
 <!-- ## 个人简历 -->
 
 <ol>
 <li><p>教育经历<br />
-2000/09 – 2005/06，太原理工大学与北京大学联合培养，材料加工，博士，
-1990/09 – 1993/06，太原理工大学，金属材料及热处理，硕士，
-1982/09 – 1986/06，太原工业大学，金属材料及热处理，学士，</p></li>
+2000/09 – 2005/06，太原理工大学与北京大学联合培养，材料加工，博士<br />
+1990/09 – 1993/06，太原理工大学，金属材料及热处理，硕士<br />
+1982/09 – 1986/06，太原工业大学，金属材料及热处理，学士</p></li>
 
 <li><p>研究工作经历<br />
-1986/07 – 至今，太原理工大学材料科学与工程学院，讲师、副教授、教授、博导；
+1986/07 – 至今，太原理工大学材料科学与工程学院，讲师、副教授、教授、博导；<br />
 2001/09 – 2003/06，中科院物理所国家电子显微镜重点实验室深造。</p></li>
 
 <li><p>主持科研项目（课题）计划项目</p>
@@ -172,6 +174,117 @@
 <li>横向项目，基于光子晶体的X射线光子聚焦技术基础理论研究，2016/09- 2017/12，26万元，负责人</li>
 <li>校企合作, 钢丝线材组织结构与性能分析, 2017/01- 2017/12，3万元，负责人3万元</li>
 </ul></li>
+</ol>
+
+<h3 id="郭臻"><strong>郭臻</strong></h3>
+
+<p>1977年11月生，太原理工大学特聘教授，山西省委组织部第七批“百人计划”特聘专家。
+2008年毕业于香港大学，获得哲学博士学位，导师为香港大学首席教授 David Lee Phillips。2009-2014年在香港大学从事博士后及附属研究员工作，合作导师为国际著名生物、无机材料化学家支志明院士。
+主要研究方向：1）水溶性高分子担载型金属多重键配合物结构、反应性（碳氢键及小分子活化）、催化机理和新型催化体系设计及其理论化学研究;2）长寿命磷光金属配合物（聚合物）的设计合成与理论模拟计算及其光催化反应性能研究;3) 金属多重键配合物反应机理及其应用的研究。</p>
+
+<ol>
+<li><p>主讲课程：
+材料热力学及应用、功能高分子材料</p></li>
+
+<li><p>研究成果：
+近六年来在JACS（美国化学会志），Angewandte Chemie International Edition （德国应用化学），Chem. Euro（欧洲化学）， Organomattellics（有机金属）, JPCB（物理化学）等国内外主要学术期刊上发表学术论文二十余篇，其中影响因子在3.0以上论文十七篇。以下是近年发表的部分文章：</p>
+
+<ul>
+<li>Guo Z, Ke Z F, Phillips D L, et al, ORGANOMETALLICS 2008, 27, 181-188.</li>
+<li>Guo Z, Zhao C Y, Phillips D L, Phys.Chem. A  2008, 112, 8561–8568.</li>
+<li>Guo Z, Xue J D, Ke J F, Phillips D L, Zhao C J, Phys. Chem. B. 2009, 113, 6528-6532.</li>
+<li>Liu+ X Y, Guo+ Z, Dong S J, Che C M (“+”:equal contribution), Chemistry-An European Journal 2011,17,12932.</li>
+<li>Yan V K，Guo Z，Choi M K W，Yu W Y，Huang J S，Che C M, JACS 2012，134, 7588-7591.</li>
+<li>Guo Z, Guan X, Huang J, Che C M, Chemistry-An European Journal 2013,19,1320.</li>
+<li>Tse C W，Chow W S，Guo Z，Che C M, Angew.Chem.Int.Ed. 2014, 124, 11538–11542.</li>
+<li>Li Z F，Yang X P，Li H X，Guo Z, ORGANOMETALLICS 2014,33, 5101-5110.</li>
+<li>Reddy A R, Zhou C Y, Guo Z, Wei J, Che C M, Angew.Chem.Int.Ed. 2014, 53, 14175.(VIP)</li>
+</ul></li>
+
+<li><p>承担项目：</p>
+
+<ol>
+<li>太原理工大学“百人计划”科研启动基金150万</li>
+<li>山西省高校“131”领军人才工程科研启动基金100万</li>
+<li>Transition Metal-Catalysed Oxygenation Reactions. Biomimetic and Photochemical Approaches.(1,095,000HKD) 2011.01.01-2013.12.3，General Research Fund (GRF) 香港研究資助局资助)，第二参研人。</li>
+<li>“过渡金属卟啉络合物催化的卡宾及氮宾碳氢键插入反应及其应用研究”国家自然科学基金面上（21272197,2013-2016）主要参研人。</li>
+<li>“金属配合物激发态的基础与应用研究”国家973项目（2013CB834802,2013-2017）主要参研人.</li>
+</ol></li>
+</ol>
+
+<h3 id="轩海成"><strong>轩海成</strong></h3>
+
+<p>2012年6月毕业于南京大学，获博士学位。太原理工大学材料科学与工程学院副教授，山西省高等学校优秀青年学术带头人。
+先后参与了“973”、国家自然科学基金重点项目和多个自然科学基金面上项目，在金属材料功能性质方面和单复相多铁性材料的相关效应研究等方面积累了一定的经验。主要研究金属材料的设计、成型及其力学、磁学等功能性质；无机非金属材料在储能方面的应用等方面。2010年，硕士学位论文被评为“江苏省优秀硕士学位论文”；2011年，获得教育部“博士研究生学术新人奖”；2012年，作为“磁性合金的相变及相关效应研究”项目参与人获得江苏省科学技术二等奖；2013年，博士学位论文被评为“江苏省优秀博士学位论文”;2014年，获太原理工大学校优青。目前，在Applied Physics Letters，Scientific Reports，Journal of Applied Physics等国际知名刊物发表SCI科研论文50余篇，被引用700余次。多次参加国内外学术会议、论坛和讲座等，现为国际物理和材料类期刊J. Appl. Phys.、J. Alloys Compd.、Solid State Commun.、INTERMETALLICS 等杂志审稿人。
+目前主要从事金属材料的设计、成型及其力学、磁学等功能性质以及无机非金属材料在储能方面的研究。</p>
+
+<ol>
+<li><p>主讲课程：
+材料热力学及应用、材料科学基础，功能材料，材料科学与工程前沿，半导体物理学，文献检索与利用</p></li>
+
+<li><p>研究成果：</p>
+
+<ol>
+<li>H. C. Xuan, Appl. Phys. Lett. 100, 172410 (2012).</li>
+<li>H. C. Xuan, Appl. Phys. Lett. 99, 032509 (2011).</li>
+<li>H. C. Xuan, Appl. Phys. Lett. 98, 052505 (2011).</li>
+<li>H. C. Xuan, Appl. Phys. Lett. 96, 202502 (2010).</li>
+<li>H. C. Xuan, Appl. Phys. Lett. 92, 242506 (2008).</li>
+<li>H. C. Xuan, Appl. Phys. Lett. 92, 102503 (2008).</li>
+<li>H. C. Xuan, J. Appl. Phys. 108, 103920 (2010).</li>
+<li>H. C. Xuan, J. Phys. D: Appl. Phys. 41, 215002 (2008).</li>
+<li>H. C. Xuan, INTERMETALLICS 47, 31 (2014).</li>
+<li>H. C. Xuan, INTERMETALLICS 54, 120 (2014).</li>
+<li>H. C. Xuan, J. Alloys Compd. 509, 5761 (2011).</li>
+<li>H. C. Xuan, J. Alloys Compd. 519, 97 (2012).</li>
+<li>H. C. Xuan, J. Alloys Compd. 550, 446 (2013).</li>
+<li>H. C. Xuan, J. Alloys Compd. 582, 369 (2014).</li>
+<li>H. C. Xuan, Solid State Commun. 142, 591 (2007).</li>
+<li>H. C. Xuan, Physica Status Solidi A-Applications and Materials Science 212, 1954 (2015).</li>
+<li>H. C. Xuan, Applied Physics A-Materials Science &amp; Processing 115, 597 (2015).</li>
+<li>H. C. Xuan, Phys. Status Solidi A 212, 680 (2015).</li>
+</ol></li>
+
+<li><p>承担项目：</p>
+
+<ol>
+<li>主持国家自然科学基金青年基金“Ni(Fe,Co)MnAl合金中磁场诱导相变、磁电阻和磁致应变的研究（51401140）”</li>
+<li>主持教育部博士点基金“铁磁形状记忆合金的相变调节和相关效应研究（20131402120004）”</li>
+<li>主持山西省自然科学基金“Mn-Ni基铁磁形状记忆合金的磁性马氏体相变、磁热和磁电阻效应研究（ 2014021018-1）”</li>
+<li>主持南京大学固体微结构物理国家重点实验室开放基金“新型Mn基合金磁结构相变的调控及相关物理效应研究（M27013）”</li>
+<li>主持太原理工大学人才引进启动经费（tyut-rc201228a）。</li>
+<li>主持太原理工大学校基金优秀青年培育项目（2014YQ018）。</li>
+<li>主持太原理工大学校基金（2013Z002）。</li>
+</ol></li>
+</ol>
+
+<h3 id="梁小红"><strong>梁小红</strong></h3>
+
+<p>1983年10月生，中共党员，山西省太原市人，博士，讲师。
+现在材料科学与工程学院材料物理与化学系从事教学科研工作。
+2002-2006年，山西大学化学化工学院应用化学专业毕业，获理学学士学位；2006-2011年  中国科学院研究生院化学与化学工程学院毕业，获工学博士学位；2011年-今，太原理工大学 讲师。
+主要从事半导体和仿生纳米材料的组装制备、结构调控及性能表征，研究纳米材料“合成-结构-性能”间的关系。</p>
+
+<ol>
+<li><p>主讲课程：
+材料热力学及应用、结构化学基础、物理化学、文献检索与利用。</p></li>
+
+<li><p>研究成果：
+先后参与了两项国家自然科学基金项目，一项国家973项目，部分研究成果已在SCI和EI收录杂志上发表，并已申请国家专利两项。</p>
+
+<ol>
+<li>Xiaohong Liang,et al. Langmuir 2010；</li>
+<li>Liang Xiaohong,et al. Key Engineering Materials 2010；</li>
+<li>Xiaohong Liang,et al. Crystal Growth &amp; Design 2012.</li>
+</ol></li>
+
+<li><p>承担项目：</p>
+
+<ol>
+<li>山西省基础研究项目（青年科技研究基金）</li>
+<li>太原理工大学人才基金资助项目</li>
+<li>太原理工大学校青年基金</li>
+</ol></li>
 </ol>
 
 				</section>
@@ -192,7 +305,16 @@
 			<nav id="TableOfContents">
 <ul>
 <li><a href="#教学团队">教学团队</a></li>
-<li><a href="#负责人简介">负责人简介</a></li>
+<li><a href="#团队简介">团队简介</a>
+<ul>
+<li>
+<ul>
+<li><a href="#韩培德"><strong>韩培德</strong></a></li>
+<li><a href="#郭臻"><strong>郭臻</strong></a></li>
+<li><a href="#轩海成"><strong>轩海成</strong></a></li>
+<li><a href="#梁小红"><strong>梁小红</strong></a></li>
+</ul></li>
+</ul></li>
 </ul>
 </nav>
 		</div>
