--- a/recitation/index.html
+++ b/recitation/index.html
@@ -4,9 +4,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学">
+		<link rel="alternate" href="/index.xml" type="application/rss+xml" title="材料热力学及应用">
 		<link rel="icon" href="https://tyutmsemt.github.io//favicon.ico">
-		<title> - 材料热力学</title>
+		<title> - 材料热力学及应用</title>
 		
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/highlight/default.css">
 		<link rel="stylesheet" href="https://tyutmsemt.github.io//css/bootstrap.min.css">
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学</a>
+				<a class="navbar-brand" href="https://tyutmsemt.github.io//">材料热力学及应用</a>
 			</div>
 			<div id="navbar" class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
@@ -74,10 +74,11 @@
 <h2 id="习题">习题</h2>
 
 <ul>
-<li><a href="/files/习题1.doc">习题1</a></li>
-<li><a href="/files/习题2.doc">习题2</a></li>
-<li><a href="/files/习题3.doc">习题3</a>
-<!-- + [习题1](/files/习题网址.doc) --></li>
+<li><a href="/files/习题1.pdf">习题1</a></li>
+<li><a href="/files/习题2.pdf">习题2</a></li>
+<li><a href="/files/习题3.pdf">习题3</a></li>
+<li><a href="/files/测试题1.pdf">测试题1</a></li>
+<li><a href="/files/测试题2.pdf">测试题2</a></li>
 </ul>
 
 				</section>
